# obsidian-mcp

./: README.md  dev_server.py  pyproject.toml  tutorial.md
src/obsidian_mcp/: __init__.py  __main__.py  logging_setup.py  server.py  utils.py
